Bug 967089 - [gallery] remove visibility monitor code if it is no longer needed

--- a/apps/gallery/style/gallery.css
+++ b/apps/gallery/style/gallery.css
@@ -214,12 +214,12 @@ body.pickView #thumbnails {
   padding: 0;
 }
 
-#thumbnails>li {
+#thumbnails>img {
   /* no list item bullets */
   list-style-type: none;
 }
 
-#thumbnails>li:first-child .thumbnail-group-header {
+#thumbnails>img:first-child .thumbnail-group-header {
   border-top: 0.1rem solid;
   border-color:rgba(255,255,255, 0.1);
 }
